[package]
name = "cnv"
version = "0.4.0"
edition = "2021"
authors = ["Neeraj <neerrrajj@proton.me>"]
description = "Command-line tool to convert between units of measurement"
license = "MIT"
repository = "https://github.com/neerrrajj/cnv"
readme = "README.md"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
once_cell = "1.20.3"
