[package]
name = "cnv"
version = "0.7.0"
edition = "2021"
authors = ["Neeraj <neerrrajj@proton.me>"]
description = "Command-line tool to convert between units of measurement"
license = "MIT"
repository = "https://github.com/neerrrajj/cnv"
readme = "README.md"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
dotenv = "0.15.0"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
