[package]
name = "cnv"
version = "0.8.0"
edition = "2021"
authors = ["Neeraj <neerrrajj@proton.me>"]
description = "Command-line tool to convert between units of measurement"
license = "MIT"
repository = "https://github.com/neerrrajj/cnv"
readme = "README.md"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.28", features = ["derive"] }
directories = "6.0.0"
dotenv = "0.15.0"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
